--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: cimg/node:20.3.1
 
-    working_directory: ~/repo/next-boilerplate/
+    working_directory: ~/repo
 
     steps:
       - checkout
