--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
@@ -25,6 +24,12 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/react": "^18.2.14",
+    "babel-jest": "^29.5.0",
     "jest": "^29.5.0"
   }
 }
