--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.3.1",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
